# pic-mock

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fw_ver.py  picpre.py  version.h.in
basefw/: app.h  common.h  debug.h  i2c_app.c  i2c_app.h  i2c_regs_data.h  main.c  main.h  modules.c  modules.h  tasks.c  tasks.h  timers.c  timers.h
cmake/: FwVer.cmake  MockPIC.cmake  PICBuild.cmake
include/: mock_hw.hpp  xc.h
src/: mock_hw.cpp  test_main.cpp
test/: CMakeLists.txt  app.c  app.cpp  application.h  i2c_regs.c  test_i2c_client.cpp  test_timers.cpp
